Fix Dark mode toggle

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --dark-mode-selector: .dark;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
